# TelemetryBridge

./: .gitignore  CMakeLists.txt  README.md  README.txt  config.ini
include/: ConfigManager.h  TelemetryManager.h
src/: ConfigManager.cpp  TelemetryManager.cpp  main.cpp
